--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,2 @@
 service:
-  name: service A this is bydefault properties file we did it
+  name: service A this is bydefault properties file we did it  appllication application
